--- a/src/app/pages/departments/add-department/add-department.component.html
+++ b/src/app/pages/departments/add-department/add-department.component.html
@@ -26,7 +26,7 @@
                   <input
                     type="text"
                     class="form-control"
-                    placeholder="Deparment Name"
+                    placeholder="Department Name"
                     formControlName="department_name"
                     (input)="validateToLettersOnly($event)"
                   />
